--- a/hw7_aes.ipynb
+++ b/hw7_aes.ipynb
@@ -9,7 +9,8 @@
     "kernelspec": {
       "name": "python3",
       "display_name": "Python 3"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -24,20 +25,39 @@
         "import matplotlib.pyplot as plt\r\n",
         "import time"
       ],
-      "execution_count": 69,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "He2P1NFOR-rB"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "He2P1NFOR-rB",
+        "outputId": "6b8de84b-f92b-479e-ae96-f74ca49521f1"
       },
       "source": [
         "#load the dataset\r\n",
         "(training_images, training_labels), (test_images, test_labels) = tf.keras.datasets.fashion_mnist.load_data()"
       ],
-      "execution_count": 70,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/train-labels-idx1-ubyte.gz\n",
+            "32768/29515 [=================================] - 0s 0us/step\n",
+            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/train-images-idx3-ubyte.gz\n",
+            "26427392/26421880 [==============================] - 0s 0us/step\n",
+            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/t10k-labels-idx1-ubyte.gz\n",
+            "8192/5148 [===============================================] - 0s 0us/step\n",
+            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/t10k-images-idx3-ubyte.gz\n",
+            "4423680/4422102 [==============================] - 0s 0us/step\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -47,7 +67,7 @@
           "height": 150
         },
         "id": "jvrHvVbfSYRW",
-        "outputId": "b7e802fc-fe4a-4a29-a17c-21a3a913f200"
+        "outputId": "3348130e-cb33-40be-b2ec-b1202e5e5e1c"
       },
       "source": [
         "#Visualization\r\n",
@@ -66,7 +86,7 @@
         "\r\n",
         "\r\n"
       ],
-      "execution_count": 71,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -115,16 +135,14 @@
         "training_images = tf.data.Dataset.from_tensor_slices(training_images)\r\n",
         "training_images = training_images.map(lambda img : tf.cast(tf.expand_dims(img,-1), tf.float32))\r\n",
         "training_images = training_images.map(lambda img: img/255)\r\n",
-        "#labels must be stored as a Dataset to add them to the training_data\r\n",
-        "#as we do not use them for training no one_hot encoding is needed though\r\n",
-        "training_labels = tf.data.Dataset.from_tensor_slices(training_labels)\r\n",
         "\r\n",
         "#Prepare the dataset\r\n",
         "#this includes dividing the dataset into batches\r\n",
-        "training_data = tf.data.Dataset.zip((training_images, training_labels))\r\n",
+        "training_data = training_images\r\n",
         "training_data = training_data.batch(64)\r\n",
         "training_data = training_data.shuffle(buffer_size= 64)\r\n",
         "training_data = training_data.prefetch(16)\r\n",
+        "\r\n",
         "\r\n",
         "test_images = test_images[:1000]\r\n",
         "test_labels = test_labels[:1000]\r\n",
@@ -132,14 +150,12 @@
         "test_images = test_images.map(lambda img : tf.cast(tf.expand_dims(img,-1), tf.float32))\r\n",
         "test_images = test_images.map(lambda img: img/255)\r\n",
         "\r\n",
-        "test_labels = tf.data.Dataset.from_tensor_slices(test_labels)\r\n",
-        "\r\n",
-        "test_data = tf.data.Dataset.zip((test_images, test_labels))\r\n",
-        "test_data = test_data.batch(64)\r\n",
-        "test_data = test_data.shuffle(buffer_size= 64)\r\n",
-        "test_data = test_data.prefetch(16)"
+        "test_data = test_images\r\n",
+        "test_data = test_data.batch(20)\r\n",
+        "test_data = test_data.shuffle(buffer_size= 20)\r\n",
+        "test_data = test_data.prefetch(10)"
       ],
-      "execution_count": 72,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -201,7 +217,7 @@
         "\r\n",
         "    return x\r\n"
       ],
-      "execution_count": 73,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -247,7 +263,7 @@
         "\r\n",
         "    return x"
       ],
-      "execution_count": 74,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -277,7 +293,7 @@
         "\r\n",
         "    return x"
       ],
-      "execution_count": 75,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -297,7 +313,7 @@
       "source": [
         ""
       ],
-      "execution_count": 75,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -330,13 +346,13 @@
         "  losses = []\r\n",
         "  accuracies = []\r\n",
         "\r\n",
-        "  for image,label in input:\r\n",
+        "  for image in input:\r\n",
         "    reconstructed_img = model(image, training)\r\n",
         "    loss = loss_function(reconstructed_img, image)\r\n",
         "\r\n",
         "  return loss\r\n"
       ],
-      "execution_count": 76,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -355,7 +371,7 @@
         "  ax[1].set_title(\"input\")\r\n",
         "  ax[1].axis(\"off\")"
       ],
-      "execution_count": 77,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -370,7 +386,7 @@
         "    # compute duration of an epoch\r\n",
         "    return round(time_per_training_step, 2)"
       ],
-      "execution_count": 78,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -380,7 +396,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IE-08M-0lXN3",
-        "outputId": "90fb6ada-bdf1-45b7-c0e7-81133cb12f6a"
+        "outputId": "81cde5bc-5713-41dd-db13-a3121967f256"
       },
       "source": [
         "tf.keras.backend.clear_session()\r\n",
@@ -409,7 +425,7 @@
         "\r\n",
         "  start = time.time()\r\n",
         "  original_loss = 0\r\n",
-        "  for (images,labels) in training_data:\r\n",
+        "  for images in training_data:\r\n",
         "    train_loss = train_step(conv_ae, images, loss_function, optimizer, training = True)\r\n",
         "\r\n",
         "    original_loss = running_average_factor * original_loss + (1-running_average_factor) * train_loss\r\n",
@@ -424,22 +440,29 @@
         {
           "output_type": "stream",
           "text": [
-            "0 . epoch --------------------------------------------------------------------------------\n"
+            "0 . epoch --------------------------------------------------------------------------------\n",
+            "the training step took 24.84 seconds\n",
+            "train_loss 0.020216778\n",
+            "1 . epoch --------------------------------------------------------------------------------\n",
+            "the training step took 18.11 seconds\n",
+            "train_loss 0.018188428\n",
+            "2 . epoch --------------------------------------------------------------------------------\n",
+            "the training step took 18.17 seconds\n",
+            "train_loss 0.016916731\n",
+            "3 . epoch --------------------------------------------------------------------------------\n",
+            "the training step took 17.97 seconds\n",
+            "train_loss 0.01644485\n",
+            "4 . epoch --------------------------------------------------------------------------------\n",
+            "the training step took 18.01 seconds\n",
+            "train_loss 0.016491858\n",
+            "5 . epoch --------------------------------------------------------------------------------\n",
+            "the training step took 18.0 seconds\n",
+            "train_loss 0.01598464\n",
+            "6 . epoch --------------------------------------------------------------------------------\n"
           ],
           "name": "stdout"
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "2bgFcZmXavIg"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -456,10 +479,61 @@
         "id": "SXpaDjlEoCKT"
       },
       "source": [
-        "#test_embeddings = test_data[:1000]"
+        "#TSNE stuff\r\n",
+        "from sklearn.manifold import TSNE\r\n",
+        "\r\n",
+        "label_dict = {0: \"tab:blue\",1: \"tab:green\", 2: \"tab:orange\", 3: \"tab:red\", 4: \"tab:purple\",\r\n",
+        "               5: \"tab:brown\", 6: \"tab:pink\", 7: \"tab:grey\", 8: \"tab:olive\", 9: \"tab:cyan\"}\r\n",
+        "\r\n",
+        "plot_labels = [\"top\", \"trouser\", \"pullover\", \"dress\", \"coat\", \"sandal\", \"shirt\", \"sneaker\", \"bag\", \"boot\"]\r\n",
+        "embeddings = []\r\n",
+        "\r\n",
+        "#walk through the test_data and produce embeddings\r\n",
+        "#athe data is batched\r\n",
+        "for image in test_data:\r\n",
+        "  embeddings.append(conv_ae.encoder(image))\r\n",
+        "\r\n",
+        "embeddings_arr = np.array(embeddings)\r\n",
+        "embeddings_arr = np.reshape(embeddings_arr, (1000,10))\r\n",
+        "embeddings_arr = TSNE(n_components=2).fit_transform(embeddings_arr)\r\n",
+        "embedded_x = embeddings_arr[:,0]\r\n",
+        "embedded_y = embeddings_arr[:,1]\r\n",
+        "embedded_label = test_labels\r\n",
+        "\r\n",
+        "\r\n"
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "R7vA5xQR37um"
+      },
+      "source": [
+        "#Visualization\r\n",
+        "fig, ax = plt.subplots()\r\n",
+        "\r\n",
+        "for x, y, group in zip(embedded_x, embedded_y, embedded_label):\r\n",
+        "  ax.scatter(x, y, color = label_dict[group])\r\n",
+        "\r\n",
+        "plt.xlabel(\"dimension 1\")\r\n",
+        "plt.ylabel(\"dimension 2\")\r\n",
+        "plt.legend(label_dict)\r\n",
+        "plt.show()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "CZEQTE3o-I0H"
+      },
+      "source": [
+        "Side note:\r\n",
+        "Thisweek noone of us was able to drop by in the Q and A sessions, therefore our homework might not be done in the way you expected. We tried our best to produce a result that fits your task description which we were somtimes unsure about."
+      ]
     }
   ]
 }
