handling seq and query data wrongly

--- a/hw9.ipynb
+++ b/hw9.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Untitled7.ipynb",
+      "name": "hw9.ipynb",
       "provenance": []
     },
     "kernelspec": {
@@ -22,7 +22,7 @@
         "import tensorflow as tf\r\n",
         "import matplotlib.pyplot as plt"
       ],
-      "execution_count": 9,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -32,28 +32,30 @@
       },
       "source": [
         "#generate the dataset\r\n",
+        "BATCHSIZE = 32\r\n",
         "def generate_data(numb_samples, seq_length):\r\n",
         "  targets = [tf.one_hot(np.random.randint(low=0, high=10, size = 2),10) for i in range(numb_samples)]\r\n",
         "  sequences = [tf.one_hot(np.random.randint(low=0,high=10, size= seq_length),10) for i in range(numb_samples)]\r\n",
         "  \r\n",
+        "  #Calculate the true results for the dataset\r\n",
         "  ground_truth = []\r\n",
         "  for target,seq in zip(targets,sequences):\r\n",
-        "    ground_truth.append(calculate_target(targets, sequences))\r\n",
+        "    ground_truth.append(calculate_target(target, seq))\r\n",
         "\r\n",
         "  sequences = tf.data.Dataset.from_tensor_slices(sequences)\r\n",
         "  targets = tf.data.Dataset.from_tensor_slices(targets)\r\n",
-        "  ground_truth = tf.data_Dataset.from_tensor_slices(ground_truth)\r\n",
+        "  ground_truth = tf.data.Dataset.from_tensor_slices(ground_truth)\r\n",
         "\r\n",
+        "  #Combine everything into a dataset\r\n",
         "  dataset = tf.data.Dataset.zip((sequences, targets, ground_truth))\r\n",
         "\r\n",
-        "  dataset = dataset.batch(16)\r\n",
-        "  dataset = dataset.shuffle(16)\r\n",
+        "  dataset = dataset.batch(BATCHSIZE)\r\n",
+        "  dataset = dataset.shuffle(BATCHSIZE)\r\n",
         "  dataset = dataset.prefetch(8)\r\n",
         "\r\n",
-        "  print(dataset)\r\n",
         "  return dataset"
       ],
-      "execution_count": 15,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -62,6 +64,7 @@
         "id": "lz3A128tcCCo"
       },
       "source": [
+        "'''Function to calculate which of the two queried target_options appears more often in the sequence'''\r\n",
         "def calculate_target(target_options, sequence):\r\n",
         "  first_target = np.sum(sequence == target_options[0])\r\n",
         "  second_target = np.sum(sequence == target_options[1])\r\n",
@@ -73,7 +76,7 @@
         "\r\n",
         "  return larger_sum"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -84,11 +87,8 @@
       "source": [
         "#LSTM Cell\r\n",
         "class LSTMCell(tf.keras.layers.Layer):\r\n",
-        "  def __init__(self, units):\r\n",
+        "  def __init__(self):\r\n",
         "    super(LSTMCell, self).__init__()\r\n",
-        "\r\n",
-        "    self.cell_state = tf.zeros(shape= (BATCHSIZE, units=500))\r\n",
-        "    self.hidden_state = tf.zeros(shape = (BATCHSIZE, units=500))\r\n",
         "\r\n",
         "    #gates as dense layers with respective activation function\r\n",
         "    self.forget_gate = tf.keras.layers.Dense(units = 2 , activation = tf.keras.activations.sigmoid, bias_initializer='ones')\r\n",
@@ -100,9 +100,9 @@
         "\r\n",
         "    self.tanh = tf.keras.layers.tanh()\r\n",
         "\r\n",
-        "  def call(self, input,hidden_state, cell_state):\r\n",
+        "  def call(self, sequence, query, hidden_state, cell_state):\r\n",
         "    #concatenate input and hidden state\r\n",
-        "    concat_input = tf.concat(hidden_state,input)\r\n",
+        "    concat_input = tf.concat(hidden_state,sequence,query)\r\n",
         "\r\n",
         "    #forget part of cell state\r\n",
         "    cell_state = cell_state * self.forget_gate(concat_input)\r\n",
@@ -118,7 +118,7 @@
         "    #ouput the hidden state\r\n",
         "    return hidden_state"
       ],
-      "execution_count": 13,
+      "execution_count": 54,
       "outputs": []
     },
     {
@@ -130,20 +130,20 @@
         "class LSTM(tf.keras.layers.Layer):\r\n",
         "  def __init__(self):\r\n",
         "    super(LSTM, self).__init__()\r\n",
-        "    self.read_in = \r\n",
-        "    self.cell = LSTMCell()\r\n",
-        "   \r\n",
-        "  def call(self, x):\r\n",
-        "    #inititialize cell_state\r\n",
-        "    cell_state = tf.zeros()\r\n",
-        "    hidden_state = tf.zeros()\r\n",
+        "    self.cell = LSTMCell(units=500)\r\n",
         "\r\n",
+        "    #initialize cell_state\r\n",
+        "    self.cell_state = tf.zeros(shape=(BATCHSIZE, units))\r\n",
+        "    self.hidden_state = tf.zeros(shape =(BATCHSIZE, units))\r\n",
+        "   \r\n",
+        "  def call(self, sequence,query):\r\n",
         "    #sequence and query concatenation\r\n",
-        "    hidden_state, cell_state = self.cell(x, hidden_state, cell_state)\r\n",
+        "    for seq in sequence:\r\n",
+        "      hidden_state, cell_state = self.cell(seq,query, hidden_state, cell_state)\r\n",
         "\r\n",
         "    return x"
       ],
-      "execution_count": null,
+      "execution_count": 55,
       "outputs": []
     },
     {
@@ -155,21 +155,21 @@
         "class Model(tf.keras.Model):\r\n",
         "  def __init__(self):\r\n",
         "    super(Model,self).__init__()\r\n",
-        "    self.input_layer = #?\r\n",
+        "    self.input_layer = tf.keras.layers.Dense(units=16,activation='relu') #????\r\n",
         "    self.lstm = LSTM()\r\n",
         "    self.flatten = tf.keras.layers.Flatten()\r\n",
         "    #output which of the target numbers is more likely\r\n",
         "    self.read_out = tf.keras.layers.Dense(units=1, activation=tf.keras.activations.softmax)\r\n",
         "\r\n",
-        "  def call(self, x):\r\n",
-        "    x = self.input_layer(x)\r\n",
+        "  def call(self, sequence,queries):\r\n",
+        "    x = self.input_layer(sequence)\r\n",
+        "    x = self.lstm(sequence,queries)\r\n",
         "    x = self.flatten(x)\r\n",
-        "    x = self.lstm(x)\r\n",
         "    x = self.read_out(x)\r\n",
         "\r\n",
         "    return x"
       ],
-      "execution_count": null,
+      "execution_count": 56,
       "outputs": []
     },
     {
@@ -196,7 +196,7 @@
         "\r\n",
         "  return loss, accuracy"
       ],
-      "execution_count": null,
+      "execution_count": 57,
       "outputs": []
     },
     {
@@ -213,7 +213,7 @@
         "  #iterate over image, label tuples in the batch\r\n",
         "  for (input,queries, target) in data:\r\n",
         "    #compute the prediction for the model (forward pass)\r\n",
-        "    prediction = model(input,queries)\r\n",
+        "    prediction = model((input,queries))\r\n",
         "    #compute the loss of the model with the loss function \r\n",
         "    loss = loss_function(prediction,target)\r\n",
         "    \r\n",
@@ -231,7 +231,22 @@
         "\r\n",
         "  return t_loss, t_accuracy"
       ],
-      "execution_count": null,
+      "execution_count": 58,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zAuSmwEria-9"
+      },
+      "source": [
+        "def timing(start):\r\n",
+        "    now = time.time()\r\n",
+        "    time_per_training_step = now - start\r\n",
+        "    # compute duration of an epoch\r\n",
+        "    return round(time_per_training_step, 2)"
+      ],
+      "execution_count": 59,
       "outputs": []
     },
     {
@@ -239,10 +254,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 230
+          "height": 404
         },
         "id": "znqyJuXwc2R9",
-        "outputId": "8e9c126d-766c-4b16-e252-a3a863fd46db"
+        "outputId": "dac3d7cd-53cc-4109-e798-f57aee8cf061"
       },
       "source": [
         "#train\r\n",
@@ -296,24 +311,19 @@
         "  print(\"train_loss\", np.mean(train_losses))\r\n",
         "  print(\"test_loss\", test_loss.numpy())"
       ],
-      "execution_count": 16,
+      "execution_count": 60,
       "outputs": [
         {
-          "output_type": "stream",
-          "text": [
-            "<PrefetchDataset shapes: ((None, 50, 10), (None, 2, 10)), types: (tf.float32, tf.float32)>\n"
-          ],
-          "name": "stdout"
-        },
-        {
           "output_type": "error",
-          "ename": "NameError",
+          "ename": "TypeError",
           "evalue": "ignored",
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-16-1614c2407f47>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;31m#model\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mModel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m: name 'Model' is not defined"
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-60-2490993efbd6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;31m#model\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mModel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;31m#Define hyperparameters\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-56-16abdacd0d0b>\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0msuper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mModel\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minput_layer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkeras\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlayers\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDense\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0munits\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m16\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mactivation\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'relu'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m#????\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m     \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlstm\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mLSTM\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m     \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mflatten\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkeras\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlayers\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mFlatten\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0;31m#output which of the target numbers is more likely\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-55-8dac0e11d583>\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m      2\u001b[0m   \u001b[0;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0msuper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mLSTM\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcell\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mLSTMCell\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0munits\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m500\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0;31m#initialize cell_state\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mTypeError\u001b[0m: __init__() got an unexpected keyword argument 'units'"
           ]
         }
       ]
